# mailrules

./: README.md  setup.cfg
mailrules/: __init__.py  forward_to_sieve.py  proc_to_sieve.py  procmailrc.py  shellcmd.py  sieve.py
src/mailrules/: __init__.py  cli.py  forward_to_sieve.py  patterns.py  proc_to_sieve.py  procmailrc.py  shellcmd.py  sieve.py
