[metadata]
name = mailrules
version = attr: mailrules.__version__
author = Dara Poon
author_email = dwpoon@mail.ubc.ca
license_files = LICENSE
description = Translate .forward and .procmailrc rules into Sieve scripts
long_description = file: README.md
long_description_content_type = text/markdown
keywords = procmail, sieve
url = https://github.com/dpoon/mailrules
project_urls =
    Bug Tracker = https://github.com/dpoon/mailrules/issues
    Source = https://github.com/dpoon/mailrules
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: Email
    Topic :: Communications :: Email :: Filters
    Topic :: Communications :: Email :: Mail Transport Agents

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5, <4

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    convert_mailrules = mailrules.cli:main

[options.extras_require]
timezone = python-dateutil
